[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "oscclip"
version = "0.4.0"
description = "Utilities to access the clipboard via OSC52"
authors = ["Stefan Tatschner <stefan@rumpelsepp.org>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/rumpelsepp/oscclip"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.2"
isort = "^5.10.1"
mypy = "^0.961"
pylint = "^2.14.4"

[tool.poetry.scripts]
osc-copy = "oscclip:osc_copy"
osc-paste = "oscclip:osc_paste"

[tool.mypy]
strict = true

[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = [
    "broad-except",
    "invalid-name",
    "missing-class-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]
