[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "oscclip"
version = "0.4.1"
description = "Utilities to access the clipboard via OSC52"
authors = ["Stefan Tatschner <stefan@rumpelsepp.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rumpelsepp/oscclip"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0"
ruff = "^0.0.244"
pylsp-mypy = "^0.6.5"
python-lsp-black = "^1.2.1"
python-lsp-ruff = "^1.0.4"
python-lsp-server = "^1.7.0"

[tool.poetry.scripts]
osc-copy = "oscclip:osc_copy"
osc-paste = "oscclip:osc_paste"

[tool.mypy]
strict = true

[tool.black]
target-version = ['py310']

[tool.ruff]
select = ["E", "F", "PL", "I"]
