[metadata]
name = ossclip
version = 0.2.1
author = Stefan Tatschner
author_email = stefan@rumpelsepp.org
description = Utilities to access the clipboard via OSC52
# long_description = file: README.md
# long_description_content_type = text/markdown
url = https://codeberg.org/rumpelsepp/ossclip
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    osc-copy = oscclip:osc_copy
    osc-paste = oscclip:osc_paste
